# boringrep

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakeOptions.txt  README.md  conanfile.txt
src/: BTracy.hpp  CMakeLists.txt  data.hpp  entry.cpp  mmap.cpp  mmap.hpp  pipe.hpp  ui.cpp  ui.hpp  utf8.hpp  win32.cpp  win32.hpp
